@@ -26,15 +26,6 @@ our $VERSION = '1.001002';
 
 =cut
 
-=head1 DESCRIPTION
-
-This heuristic is intended as a guarantee that B<SOME> kind of top level marker will
-be present in a distribution, as all the main tool-chains emit this file during C<configure>.
-
-Granted, this heuristic is expected to be B<never> needed, as in order to create such a file, you first need a C<Build.PL>/C<Makefile.PL> to generate it.
-
-=cut
-
 use Role::Tiny::With qw( with );
 with 'Path::IsDev::Role::Heuristic', 'Path::IsDev::Role::Matcher::Child::Exists::Any::File';
 
@@ -68,3 +59,11 @@ sub matches {
 
 1;
 
+=head1 DESCRIPTION
+
+This heuristic is intended as a guarantee that B<SOME> kind of top level marker will
+be present in a distribution, as all the main tool-chains emit this file during C<configure>.
+
+Granted, this heuristic is expected to be B<never> needed, as in order to create such a file, you first need a C<Build.PL>/C<Makefile.PL> to generate it.
+
+=cut
